--- a/giphy.html
+++ b/giphy.html
@@ -23,7 +23,7 @@
                         <form id="gif-form">
                              <label for="gif-input"></label>
                              <input type="text" id="gif-input"><br> 
-                             <input id="gif-input" type="submit" value="Submit">
+                             <input id="add-gif" type="submit" value="Submit">
                         </form>
                                          
     
