--- a/giphy.html
+++ b/giphy.html
@@ -8,6 +8,11 @@
         img{
             width: 200px;
         }
+        #float{
+            float: left;
+            margin: left; 
+            
+        }
     </style>
     <body>
         <div class ="container">
@@ -19,8 +24,8 @@
 
             </div>
             <div class="row">
-                    <div class ="col-lg-12">
-                        <form id="gif-form">
+                    <div class ="col-lg-12" id ="float">
+                        <form id="gif-form ">
                              <label for="gif-input"></label>
                              <input type="text" id="gif-input"><br> 
                              <input id="add-gif" type="submit" value="Submit">
